--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^12.20.16",
     "@types/react": "^17.0.14",
     "@types/react-dom": "^17.0.9",
+    "axios": "^0.21.1",
     "history": "^5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
